# gtestsCMake

./: README.md
gtest01/source/: CMakeLists.txt  main.cpp
gtest01/source/include/: dog.h
gtest01/source/logger/include/: log.h
gtest01/source/logger/src/: log.cpp
gtest01/source/test/: test_example.cpp
gtest02/source/: CMakeLists.txt  main.cpp
gtest02/source/include/: classic.h  strings.h
gtest02/source/src/: classic.cpp  strings.cpp
gtest02/source/test/: tests.cpp
